ft2 - mobile first : réalisation du header logo + titre

--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
     <title>Association de pêche de la Comté</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="logo-assoc d-flex justify-content-center p-1">
+        <div class="logo mx-1 border border-1 border-dark rounded-circle p-1 bg-light">
+          <img src="./images/2026318.svg" alt="" />
+        </div>
+        <h1 class="logo-text">Association de pêche de la Comté</h1>
+      </div>
+    </header>
     <nav></nav>
     <section>
       <article>
