ft3 - mobile first : mise en place du composant Navbar bootstrap

--- a/index.html
+++ b/index.html
@@ -19,15 +19,53 @@
     <title>Association de pêche de la Comté</title>
   </head>
   <body>
-    <header>
-      <div class="logo-assoc d-flex justify-content-center p-1">
-        <div class="logo mx-1 border border-1 border-dark rounded-circle p-1 bg-light">
-          <img src="./images/2026318.svg" alt="" />
+    <header class="d-flex justify-content-center">
+      <div class="d-flex justify-content-center align-items-center p-1">
+        <div
+          class="logo mx-1 border border-1 border-dark rounded-circle p-1 bg-light"
+        >
+          <img
+            src="./images/2026318.svg"
+            alt="logo de l'association de pêche de la Comté"
+          />
         </div>
         <h1 class="logo-text">Association de pêche de la Comté</h1>
       </div>
     </header>
-    <nav></nav>
+    <nav class="navbar navbar-expand-md navbar-dark bg-success">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"></a>
+        <div class="collapse navbar-collapse" id="navbarToggler">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 m-auto">
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#"
+                >L'association</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Evenements</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Règlement pêche</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Nous contacter</a>
+            </li>
+          </ul>
+        </div>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarToggler"
+          aria-controls="navbarToggler"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </nav>
     <section>
       <article>
         <h2></h2>
