ft4 - mobile first : Création section de présentation (photo + texte) + correction alignement logo assoc

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           class="logo mx-1 border border-1 border-dark rounded-circle p-1 bg-light"
         >
           <img
+            class="align-baseline"
             src="./images/2026318.svg"
             alt="logo de l'association de pêche de la Comté"
           />
@@ -66,9 +67,14 @@
         </button>
       </div>
     </nav>
-    <section>
+    <section class="presentation d-flex justify-content-center my-2">
       <article>
-        <h2></h2>
+        <div class="d-flex flex-column align-items-center">
+          <h2 class="presentation-title mb-0">Présentation de l'association</h2>
+          <img class="presentation-title-image"src="./images/sepgpaysage.png" alt="surlignage nature">
+          <img class="etang-photo w-75 img-thumbnail my-3"src="./images/pexels-maria-orlova-4946732.jpg" alt="coucher de soleil sur l'étang des tours">
+          <p class="presentation-text mx-4">L'association fut créee en 1971 par Robert VIOLET, qui souhaitait reprendre en main la gestion de l'étang des Tours, laissé à l'abandon depuis quelques années. Il fut rejoint par 11 bénévoles qui constituèrent le 1er bureau et dont certains sont encore à ce jour actifs. L'association gère aujourd'hui pas moins de 3 plans d'eau, l'étang des Tours (7 hectares), de la croix basse (5,5 hectares) le lac de la jonnière (12 hectares), mais également un réseau de 35 km deparcours sur les rivières et ruisseaux avoisinants (la Chaudre, la Sioule et le Lindron). Toute l'équipe est mobilisée tout au long de l'année pour assurer les opérations de réempoissonement des cours d'eau, l'entretien régulier des berges et l'aménagement des postes (plus particulièrement des personnes à mobilité réduite), mais également l'organisation de nombreux évenements tels que les concours, les initiations à la pêche pour les grands et les petits, et l'organisation de manifestations de type Loto, concours de pétanque,etc... </p>
+        </div>
       </article>
     </section>
     <section>
