ft7 - mobile first : création du footer copyright + facebook

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       content="Bienvenue sur le site de l'association de pêche de la Comté, dans le puy-de-Dôme(63), qui organise la pratique de pêche à la ligne sur 3 plans d'eau et pas moins de 30 km de parcours sur les rivières et ruisseaux du canton"
     />
     <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
@@ -87,7 +93,7 @@
             jour actifs. L'association gère aujourd'hui pas moins de 3 plans
             d'eau, l'étang des Tours (7 hectares), de la croix basse (5,5
             hectares) le lac de la jonnière (12 hectares), mais également un
-            réseau de 35 km deparcours sur les rivières et ruisseaux avoisinants
+            réseau de 30 km deparcours sur les rivières et ruisseaux avoisinants
             (la Chaudre, la Sioule et le Lindron). Toute l'équipe est mobilisée
             tout au long de l'année pour assurer les opérations de
             réempoissonement des cours d'eau, l'entretien régulier des berges et
@@ -148,14 +154,17 @@
         <figure class="mb-0">
           <img src="./images/fishing-4972660.svg" alt="" />
           <figcaption>Magasin DUVERT</figcaption>
-        </figure >
-        <figure >
+        </figure>
+        <figure>
           <img class="mb-0" src="./images/mountain-1849091_640.png" alt="" />
           <figcaption>CG de la Comté</figcaption>
         </figure>
       </div>
     </aside>
-    <footer></footer>
+    <footer class="bg-success text-white d-flex align-items-center justify-content-around">
+      <span class="copy align-middle">&copy guibacsolutions-2021</span>
+      <span class="lgfacebook"><a href=""><i class="fab fa-facebook text-white"></i></a></span>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
       integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
