--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
         <div class="collapse navbar-collapse" id="navbarToggler">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 m-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">L'association</a>
+              <a class="nav-link mx-xl-3" aria-current="page" href="#">L'association</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Evenements</a>
+              <a class="nav-link mx-xl-3" href="#">Evenements</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Règlement pêche</a>
+              <a class="nav-link mx-xl-3" href="#">Règlement pêche</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Nous contacter</a>
+              <a class="nav-link mx-xl-3" href="#">Nous contacter</a>
             </li>
           </ul>
         </div>
@@ -71,99 +71,125 @@
         </button>
       </div>
     </nav>
-    <section class="presentation d-flex justify-content-center mt-4">
-      <article>
-        <div class="d-flex flex-column align-items-center">
-          <h2 class="presentation-title mb-0">Présentation de l'association</h2>
-          <img
-            class="presentation-title-image mb-2"
-            src="./images/sepgpaysage.png"
-            alt="surlignage nature"
-          />
-          <img
-            class="etang-photo w-75 img-thumbnail my-3 shadow-sm"
-            src="./images/pexels-maria-orlova-4946732.jpg"
-            alt="coucher de soleil sur l'étang des tours"
-          />
-          <p class="presentation-text mx-4">
-            L'association fut créee en 1971 par Robert VIOLET, qui souhaitait
-            reprendre en main la gestion de l'étang des Tours, laissé à
-            l'abandon depuis quelques années. Il fut rejoint par 11 bénévoles
-            qui constituèrent le 1er bureau et dont certains sont encore à ce
-            jour actifs. L'association gère aujourd'hui pas moins de 3 plans
-            d'eau, l'étang des Tours (7 hectares), de la croix basse (5,5
-            hectares) le lac de la jonnière (12 hectares), mais également un
-            réseau de 30 km deparcours sur les rivières et ruisseaux avoisinants
-            (la Chaudre, la Sioule et le Lindron). Toute l'équipe est mobilisée
-            tout au long de l'année pour assurer les opérations de
-            réempoissonement des cours d'eau, l'entretien régulier des berges et
-            l'aménagement des postes (plus particulièrement des personnes à
-            mobilité réduite), mais également l'organisation de nombreux
-            évenements tels que les concours, les initiations à la pêche pour
-            les grands et les petits, et l'organisation de manifestations de
-            type Loto, concours de pétanque, etc...
-          </p>
-        </div>
-      </article>
-    </section>
-    <section class="presentation d-flex justify-content-center my-4">
-      <article>
-        <div class="d-flex flex-column align-items-center mb-3">
-          <h2 class="presentation-title mb-0">NOUS CONTACTER</h2>
-          <img
-            class="presentation-title-image mb-3"
-            src="./images/sepgpaysage.png"
-            alt="surlignage nature"
-          />
-          <p class="contact align-self-start mx-4 fw-bold mb-1">
-            Michel DUPONT - Président - Tel :
-            <a class="text-decoration-none" href="tel:+33720325212"
-              >07-20-32-52-12</a
-            >
-          </p>
-          <p class="contact align-self-start mx-4 fw-bold mb-1">
-            Pierre DURAND - Vice-président - Tel :
-            <a class="text-decoration-none" href="tel:+33612135022"
-              >06-12-13-50-22</a
-            >
-          </p>
-          <p class="contact align-self-start mx-4 fw-bold mb-1">
-            Jacques MERCIER - Garde pêche - Tel :
-            <a class="text-decoration-none" href="tel:+33654138919"
-              >06-54-13-29-19</a
-            >
-          </p>
-          <p class="contact align-self-start mx-4 fw-bold mb-1">
-            Mail de l'association :
-            <a
-              class="text-decoration-none"
-              href="mailto:assoc-peche-comte@gmail.com"
-              >assoc-peche-comte@gmail.com</a
-            >
-          </p>
-        </div>
-      </article>
-    </section>
-    <aside class="shadow-lg">
-      <h2 class="text-success text-center py-3">Nos partenaires</h2>
-      <div class="logo-partenaires d-flex justify-content-around text-center">
-        <figure class="mb-0">
-          <img src="./images/fish-32558.svg" alt="" />
-          <figcaption>Magasin MOULIN</figcaption>
-        </figure>
-        <figure class="mb-0">
-          <img src="./images/fishing-4972660.svg" alt="" />
-          <figcaption>Magasin DUVERT</figcaption>
-        </figure>
-        <figure>
-          <img class="mb-0" src="./images/mountain-1849091_640.png" alt="" />
-          <figcaption>CG de la Comté</figcaption>
-        </figure>
+
+    <!-- création d'une div qui englobe les 3 sections presentation, contacts et partenaires pour responsive ecran large -->
+    <div class="d-lg-flex align-items-lg-stretch">
+      <!-- bloc principal responsive 1 : présentation + contacts -->
+      <div class="responsive-1">
+        <section class="presentation d-flex justify-content-center mt-4">
+          <article>
+            <div class="d-flex flex-column align-items-center">
+              <h2 class="presentation-title mb-0">
+                Présentation de l'association
+              </h2>
+              <img
+                class="presentation-title-image mb-2"
+                src="./images/sepgpaysage.png"
+                alt="surlignage nature"
+              />
+              <!-- bloc responsive qui permet d'intégrer la photo en float à l'intérieur du texte -->
+              <div class="d-flex flex-column align-items-center d-lg-block">
+                <img
+                  class="etang-photo w-75 img-thumbnail my-3 shadow-sm float-lg-start m-lg-2"
+                  src="./images/pexels-maria-orlova-4946732.jpg"
+                  alt="coucher de soleil sur l'étang des tours"
+                />
+                <p class="presentation-text mx-4">
+                  L'association fut créee en 1971 par Robert VIOLET, qui
+                  souhaitait reprendre en main la gestion de l'étang des Tours,
+                  laissé à l'abandon depuis quelques années. Il fut rejoint par
+                  11 bénévoles qui constituèrent le 1er bureau et dont certains
+                  sont encore à ce jour actifs. L'association gère aujourd'hui
+                  pas moins de 3 plans d'eau, l'étang des Tours (7 hectares), de
+                  la croix basse (5,5 hectares) le lac de la jonnière (12
+                  hectares), mais également un réseau de 30 km deparcours sur
+                  les rivières et ruisseaux avoisinants (la Chaudre, la Sioule
+                  et le Lindron). Toute l'équipe est mobilisée tout au long de
+                  l'année pour assurer les opérations de réempoissonement des
+                  cours d'eau, l'entretien régulier des berges et l'aménagement
+                  des postes (plus particulièrement des personnes à mobilité
+                  réduite), mais également l'organisation de nombreux évenements
+                  tels que les concours, les initiations à la pêche pour les
+                  grands et les petits, et l'organisation de manifestations de
+                  type Loto, concours de pétanque, etc...
+                </p>
+              </div>
+            </div>
+          </article>
+        </section>
+        <section class="presentation d-flex justify-content-center my-4">
+          <article>
+            <div class="d-flex flex-column align-items-center mb-3">
+              <h2 class="presentation-title mb-0">NOUS CONTACTER</h2>
+              <img
+                class="presentation-title-image mb-3"
+                src="./images/sepgpaysage.png"
+                alt="surlignage nature"
+              />
+              <p class="contact align-self-start mx-4 fw-bold mb-1">
+                Michel DUPONT - Président - Tel :
+                <a class="text-decoration-none" href="tel:+33720325212"
+                  >07-20-32-52-12</a
+                >
+              </p>
+              <p class="contact align-self-start mx-4 fw-bold mb-1">
+                Pierre DURAND - Vice-président - Tel :
+                <a class="text-decoration-none" href="tel:+33612135022"
+                  >06-12-13-50-22</a
+                >
+              </p>
+              <p class="contact align-self-start mx-4 fw-bold mb-1">
+                Jacques MERCIER - Garde pêche - Tel :
+                <a class="text-decoration-none" href="tel:+33654138919"
+                  >06-54-13-29-19</a
+                >
+              </p>
+              <p class="contact align-self-start mx-4 fw-bold mb-1">
+                Mail de l'association :
+                <a
+                  class="text-decoration-none"
+                  href="mailto:assoc-peche-comte@gmail.com"
+                  >assoc-peche-comte@gmail.com</a
+                >
+              </p>
+            </div>
+          </article>
+        </section>
       </div>
-    </aside>
-    <footer class="bg-success text-white d-flex align-items-center justify-content-around">
+      <!-- bloc responsive principal 2 : "nos partenaires qui passe à drite en vertical" -->
+      <div class="responsive-2">
+        <aside class="shadow-lg">
+          <h2 class="text-success text-center py-3">Nos partenaires</h2>
+          <div
+            class="logo-partenaires d-flex justify-content-around text-center flex-lg-column"
+          >
+            <figure class="mb-0">
+              <img src="./images/fish-32558.svg" alt="" />
+              <figcaption class="text-lg-center">Magasin MOULIN</figcaption>
+            </figure>
+            <figure class="mb-0">
+              <img src="./images/fishing-4972660.svg" alt="" />
+              <figcaption class="text-lg-center">Magasin DUVERT</figcaption>
+            </figure>
+            <figure>
+              <img
+                class="mb-0"
+                src="./images/mountain-1849091_640.png"
+                alt=""
+              />
+              <figcaption class="text-lg-center">CG de la Comté</figcaption>
+            </figure>
+          </div>
+        </aside>
+      </div>
+    </div>
+    <footer
+      class="bg-success text-white d-flex align-items-center justify-content-around"
+    >
       <span class="copy align-middle">&copy guibacsolutions 2021</span>
-      <span class="lgfacebook"><a href=""><i class="fab fa-facebook text-white"></i></a></span>
+      <span class="lgfacebook"
+        ><a href=""><i class="fab fa-facebook text-white"></i></a
+      ></span>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
