--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -45,7 +45,9 @@
         <div class="collapse navbar-collapse" id="navbarToggler">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 m-auto">
             <li class="nav-item">
-              <a class="nav-link mx-xl-3" aria-current="page" href="#">L'association</a>
+              <a class="nav-link mx-xl-3" aria-current="page" href="#assoc"
+                >L'association</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link mx-xl-3" href="#">Evenements</a>
@@ -54,7 +56,7 @@
               <a class="nav-link mx-xl-3" href="#">Règlement pêche</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mx-xl-3" href="#">Nous contacter</a>
+              <a class="nav-link mx-xl-3" href="#contact">Nous contacter</a>
             </li>
           </ul>
         </div>
@@ -76,8 +78,8 @@
     <div class="d-lg-flex align-items-lg-stretch">
       <!-- bloc principal responsive 1 : présentation + contacts -->
       <div class="responsive-1">
-        <section class="presentation d-flex justify-content-center mt-4">
-          <article>
+        <div class="presentation d-flex justify-content-center mt-4">
+          <article id="assoc">
             <div class="d-flex flex-column align-items-center">
               <h2 class="presentation-title mb-0">
                 Présentation de l'association
@@ -116,9 +118,9 @@
               </div>
             </div>
           </article>
-        </section>
-        <section class="presentation d-flex justify-content-center my-4">
-          <article>
+        </div>
+        <div class="presentation d-flex justify-content-center my-4">
+          <article id="contact">
             <div class="d-flex flex-column align-items-center mb-3">
               <h2 class="presentation-title mb-0">NOUS CONTACTER</h2>
               <img
@@ -154,7 +156,7 @@
               </p>
             </div>
           </article>
-        </section>
+        </div>
       </div>
       <!-- bloc responsive principal 2 : "nos partenaires qui passe à drite en vertical" -->
       <div class="responsive-2">
@@ -164,19 +166,33 @@
             class="logo-partenaires d-flex justify-content-around text-center flex-lg-column"
           >
             <figure class="mb-0">
-              <img src="./images/fish-32558.svg" alt="" />
+              <a href="#">
+                <img
+                  class="logo-picture"
+                  src="./images/fish-32558.svg"
+                  alt="logo magasin de pêche MOULIN"
+                />
+              </a>
               <figcaption class="text-lg-center">Magasin MOULIN</figcaption>
             </figure>
             <figure class="mb-0">
-              <img src="./images/fishing-4972660.svg" alt="" />
+              <a href="#">
+                <img
+                  class="logo-picture"
+                  src="./images/fishing-4972660.svg"
+                  alt="logo Magasin de pêche DUVERT"
+                />
+              </a>
               <figcaption class="text-lg-center">Magasin DUVERT</figcaption>
             </figure>
             <figure>
-              <img
-                class="mb-0"
-                src="./images/mountain-1849091_640.png"
-                alt=""
-              />
+              <a href="#">
+                <img
+                  class="logo-picture"
+                  src="./images/mountain-1849091_640.png"
+                  alt="logo Conseil général de la Comté"
+                />
+              </a>
               <figcaption class="text-lg-center">CG de la Comté</figcaption>
             </figure>
           </div>
@@ -186,7 +202,7 @@
     <footer
       class="bg-success text-white d-flex align-items-center justify-content-around"
     >
-      <span class="copy align-middle">&copy guibacsolutions 2021</span>
+      <span class="copy align-middle">&copy;guibacsolutions 2021</span>
       <span class="lgfacebook"
         ><a href=""><i class="fab fa-facebook text-white"></i></a
       ></span>
