ft 11 - ajout de la structure de base d'index.html : header,navbar,aside et footer

--- a/index.html
+++ b/index.html
@@ -131,19 +131,19 @@
               <p class="contact align-self-start mx-4 fw-bold mb-1">
                 Michel DUPONT - Président - Tel :
                 <a class="text-decoration-none" href="tel:+33720325212"
-                  >07-20-32-52-12</a
+                  >07-20-32-52-xx</a
                 >
               </p>
               <p class="contact align-self-start mx-4 fw-bold mb-1">
                 Pierre DURAND - Vice-président - Tel :
                 <a class="text-decoration-none" href="tel:+33612135022"
-                  >06-12-13-50-22</a
+                  >06-12-13-50-xx</a
                 >
               </p>
               <p class="contact align-self-start mx-4 fw-bold mb-1">
                 Jacques MERCIER - Garde pêche - Tel :
                 <a class="text-decoration-none" href="tel:+33654138919"
-                  >06-54-13-29-19</a
+                  >06-54-13-29-xx</a
                 >
               </p>
               <p class="contact align-self-start mx-4 fw-bold mb-1">
@@ -173,7 +173,7 @@
                   alt="logo magasin de pêche MOULIN"
                 />
               </a>
-              <figcaption class="text-lg-center">Magasin MOULIN</figcaption>
+              <figcaption class="text-lg-center text-success">Magasin MOULIN</figcaption>
             </figure>
             <figure class="mb-0">
               <a href="#">
@@ -183,7 +183,7 @@
                   alt="logo Magasin de pêche DUVERT"
                 />
               </a>
-              <figcaption class="text-lg-center">Magasin DUVERT</figcaption>
+              <figcaption class="text-lg-center text-success">Magasin DUVERT</figcaption>
             </figure>
             <figure>
               <a href="#">
@@ -193,7 +193,7 @@
                   alt="logo Conseil général de la Comté"
                 />
               </a>
-              <figcaption class="text-lg-center">CG de la Comté</figcaption>
+              <figcaption class="text-lg-center text-success">CG de la Comté</figcaption>
             </figure>
           </div>
         </aside>
