--- a/event.html
+++ b/event.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Balise de Meta description pour SEO -->
+    <meta
+      name="description"
+      content="Bienvenue sur le site de l'association de pêche de la Comté, dans le puy-de-Dôme(63), qui organise la pratique de pêche à la ligne sur 3 plans d'eau et pas moins de 30 km de parcours sur les rivières et ruisseaux du canton"
+    />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,18 +25,110 @@
     <title>Association de pêche de la Comté</title>
   </head>
   <body>
-    <header></header>
-    <nav></nav>
-    <section>
-      <article>
-        <h2></h2>
-      </article>
-      <article>
-        <h2></h2>
-      </article>
-    </section>
-    <aside></aside>
-    <footer></footer>
+    <header class="d-flex justify-content-center">
+      <div class="d-flex justify-content-center align-items-center p-1">
+        <div
+          class="logo mx-1 border border-1 border-dark rounded-circle p-1 bg-light"
+        >
+          <img
+            class="align-baseline"
+            src="./images/2026318.svg"
+            alt="logo de l'association de pêche de la Comté"
+          />
+        </div>
+        <h1 class="logo-text">Association de pêche de la Comté</h1>
+      </div>
+    </header>
+    <nav class="navbar navbar-expand-md navbar-dark bg-success">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"></a>
+        <div class="collapse navbar-collapse" id="navbarToggler">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 m-auto">
+            <li class="nav-item">
+              <a class="nav-link mx-xl-3" aria-current="page" href="#assoc"
+                >L'association</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-xl-3" href="#">Evenements</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-xl-3" href="#">Règlement pêche</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-xl-3" href="#contact">Nous contacter</a>
+            </li>
+          </ul>
+        </div>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarToggler"
+          aria-controls="navbarToggler"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </nav>
+
+    <!-- création d'une div qui englobe les 3 sections evenements, contacts et partenaires pour responsive ecran large -->
+    <div class="d-lg-flex align-items-lg-stretch">
+      <!-- bloc principal responsive 1 : présentation + contacts -->
+      <div class="responsive-1">
+        
+      </div>
+      <!-- bloc responsive principal 2 : "nos partenaires qui passe à drite en vertical" -->
+      <div class="responsive-2">
+        <aside class="shadow-lg">
+          <h2 class="text-success text-center py-3">Nos partenaires</h2>
+          <div
+            class="logo-partenaires d-flex justify-content-around text-center flex-lg-column"
+          >
+            <figure class="mb-0">
+              <a href="#">
+                <img
+                  class="logo-picture"
+                  src="./images/fish-32558.svg"
+                  alt="logo magasin de pêche MOULIN"
+                />
+              </a>
+              <figcaption class="text-lg-center  text-success">Magasin MOULIN</figcaption>
+            </figure>
+            <figure class="mb-0">
+              <a href="#">
+                <img
+                  class="logo-picture"
+                  src="./images/fishing-4972660.svg"
+                  alt="logo Magasin de pêche DUVERT"
+                />
+              </a>
+              <figcaption class="text-lg-center  text-success">Magasin DUVERT</figcaption>
+            </figure>
+            <figure>
+              <a href="#">
+                <img
+                  class="logo-picture"
+                  src="./images/mountain-1849091_640.png"
+                  alt="logo Conseil général de la Comté"
+                />
+              </a>
+              <figcaption class="text-lg-center  text-success">CG de la Comté</figcaption>
+            </figure>
+          </div>
+        </aside>
+      </div>
+    </div>
+    <footer
+      class="bg-success text-white d-flex align-items-center justify-content-around"
+    >
+      <span class="copy align-middle">&copy;guibacsolutions 2021</span>
+      <span class="lgfacebook"
+        ><a href=""><i class="fab fa-facebook text-white"></i></a
+      ></span>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
       integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
