--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Pangolin&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Association de pêche de la Comté</title>
   </head>
@@ -78,7 +83,7 @@
     <div class="d-lg-flex align-items-lg-stretch">
       <!-- bloc principal responsive 1 : présentation + contacts -->
       <div class="responsive-1">
-        <div class="presentation d-flex justify-content-center mt-4">
+        <div class="presentation d-flex justify-content-center mt-3">
           <article id="assoc">
             <div class="d-flex flex-column align-items-center">
               <h2 class="presentation-title mb-0">
@@ -173,7 +178,9 @@
                   alt="logo magasin de pêche MOULIN"
                 />
               </a>
-              <figcaption class="text-lg-center text-success">Magasin MOULIN</figcaption>
+              <figcaption class="text-lg-center text-success">
+                Magasin MOULIN
+              </figcaption>
             </figure>
             <figure class="mb-0">
               <a href="#">
@@ -183,7 +190,9 @@
                   alt="logo Magasin de pêche DUVERT"
                 />
               </a>
-              <figcaption class="text-lg-center text-success">Magasin DUVERT</figcaption>
+              <figcaption class="text-lg-center text-success">
+                Magasin DUVERT
+              </figcaption>
             </figure>
             <figure>
               <a href="#">
@@ -193,7 +202,9 @@
                   alt="logo Conseil général de la Comté"
                 />
               </a>
-              <figcaption class="text-lg-center text-success">CG de la Comté</figcaption>
+              <figcaption class="text-lg-center text-success">
+                CG de la Comté
+              </figcaption>
             </figure>
           </div>
         </aside>
